--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@reduxjs/toolkit": "^2.2.6",
     "@stripe/stripe-js": "^4.0.0",
     "@tanstack/react-query": "^5.49.2",
+    "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.400.0",
     "mongodb": "^6.8.0",
@@ -38,7 +40,8 @@
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "uploadthing": "^6.13.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
