--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flutterwave-react-v3": "^1.3.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.400.0",
@@ -37,12 +38,14 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
     "redux-persist": "^6.0.0",
     "stripe": "^16.1.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
