--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flutterwave-node-v3": "^1.1.10",
     "flutterwave-react-v3": "^1.3.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
